--- a/pom.xml
+++ b/pom.xml
@@ -50,10 +50,11 @@
                     <testFailureIgnore>true</testFailureIgnore>
                     <runOrder>alphabetical</runOrder>
                     <includes>
-                        <include>**/*Runners.java</include>
+                        <include>**/*Runners.java</include> <!-- this should be the name of your runner class -->
                     </includes>
                 </configuration>
             </plugin>
+
 
             <plugin>
                 <!-- https://repo.maven.apache.org/maven2/net/masterthought/cucumber-reporting/ -->
